@@ -14,22 +14,22 @@ import javafx.scene.image.Image;
 import javafx.scene.layout.*;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import seng302.Generic.*;
-import seng302.User.Attribute.AlcoholConsumption;
-import seng302.User.Attribute.BloodType;
-import seng302.User.Attribute.Gender;
-import seng302.User.Attribute.Organ;
-import seng302.User.Attribute.SmokerStatus;
+import org.controlsfx.control.StatusBar;
+import seng302.GUI.StatusIndicator;
+import seng302.GUI.TFScene;
+import seng302.GUI.TitleBar;
 import seng302.Generic.History;
+import seng302.Generic.IO;
+import seng302.Generic.Main;
+import seng302.User.Attribute.*;
+import seng302.User.User;
 
 import java.net.URL;
 import java.time.Duration;
 import java.time.LocalDate;
 import java.util.*;
-import seng302.GUI.TFScene;
-import seng302.User.User;
 
-import static seng302.Generic.Main.streamOut;
+import static seng302.Generic.IO.streamOut;
 
 /**
  * Class which handles all the logic for the User Window.
@@ -37,6 +37,7 @@ import static seng302.Generic.Main.streamOut;
  * Saving, Undo, Redo, All input fields and more.
  */
 public class UserWindowController implements Initializable {
+    private TitleBar titleBar;
     @FXML
     private Label userDisplayText, settingAttributesLabel, ageLabel, bmiLabel, bloodPressureLabel, userHistoryLabel;
     @FXML
@@ -71,16 +72,35 @@ public class UserWindowController implements Initializable {
     private TreeTableColumn<String, String> dateTimeColumn, actionColumn;
 
     private HashMap<Organ, CheckBox> organTickBoxes;
-    private ArrayList<User> attributeUndoStack = new ArrayList<>(), attributeRedoStack = new ArrayList<>(), medicationUndoStack = new ArrayList<>(), medicationRedoStack = new ArrayList<>();
+    private ArrayList<User> waitingListUndoStack = new ArrayList<>(), waitingListRedoStack = new ArrayList<>();
+    private LinkedList<User> attributeUndoStack = new LinkedList<>(), attributeRedoStack = new LinkedList<>(), medicationUndoStack = new LinkedList<>(), medicationRedoStack = new LinkedList<>();
     private User currentUser;
 
+    @FXML
+    private StatusBar statusBar;
+    @FXML
+    private MedicationsController medicationsController;
+    @FXML
+    private MedicalHistoryDiseasesController medicalHistoryDiseasesController;
+    @FXML
+    private MedicalHistoryProceduresController medicalHistoryProceduresController;
+    @FXML
+    private WaitingListController waitingListController;
 
-    public ArrayList<User> getUserUndoStack() {
-        return attributeUndoStack;
+    public StatusIndicator statusIndicator = new StatusIndicator();
+
+
+    public UserWindowController(){
+        this.titleBar = new TitleBar();
+        titleBar.setStage(Main.getStage());
     }
 
-    public ArrayList<User> getUserRedoStack() {
-        return attributeRedoStack;
+    /**
+     * Set the stage the controller is associated with
+     * @param stage The stage on which the window is shown
+     */
+    public void setTitleBar(Stage stage){
+        titleBar.setStage(stage);
     }
 
     public User getCurrentUser() {
@@ -89,7 +109,7 @@ public class UserWindowController implements Initializable {
 
     public void setCurrentUser(User currentUser) {
         this.currentUser = currentUser;
-        userDisplayText.setText("Currently logged in as: " + currentUser.getName());
+        userDisplayText.setText("Currently logged in as: " + currentUser.getPreferredName());
         attributeUndoStack.clear();
         attributeRedoStack.clear();
         undoButton.setDisable(true);
@@ -97,15 +117,7 @@ public class UserWindowController implements Initializable {
         redoButton.setDisable(true);
         redoBannerButton.setDisable(true);
         bloodPressureLabel.setText("");
-    }
-
-    /**
-     * Adds a user object to the user undo stack. This is called whenever a user saves any changes in the GUI.
-     *
-     * @param user user object being added to the top of the stack.
-     */
-    public void addUserToUndoStack(User user) {
-        attributeUndoStack.add(new User(user));
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Home");
     }
 
     /**
@@ -188,6 +200,21 @@ public class UserWindowController implements Initializable {
             Main.getWaitingListController().populateWaitingList();
             Main.getWaitingListController().populateOrgansComboBox();
         });
+
+        statusIndicator.setStatusBar(statusBar);
+
+        // Pass the status bar and title bar objects to the embedded controllers
+        medicationsController.setStatusIndicator(statusIndicator);
+        medicationsController.setTitleBar(titleBar);
+
+        medicalHistoryDiseasesController.setStatusIndicator(statusIndicator);
+        medicalHistoryDiseasesController.setTitleBar(titleBar);
+
+        medicalHistoryProceduresController.setStatusIndicator(statusIndicator);
+        medicalHistoryProceduresController.setTitleBar(titleBar);
+
+        waitingListController.setStatusIndicator(statusIndicator);
+        waitingListController.setTitleBar(titleBar);
     }
 
     /**
@@ -203,9 +230,11 @@ public class UserWindowController implements Initializable {
     public void attributeFieldUnfocused() {
         User oldFields = new User(currentUser);
         if (updateUser() && !currentUser.fieldsEqual(oldFields)) {
-            addUserToUndoStack(oldFields);
+            attributeUndoStack.add(new User(oldFields));
             attributeRedoStack.clear();
             setUndoRedoButtonsDisabled(false, true);
+            titleBar.saved(false);
+            statusIndicator.setStatus("Edited user details", false);
         }
     }
 
@@ -215,6 +244,15 @@ public class UserWindowController implements Initializable {
     public void addCurrentToMedicationUndoStack() {
         medicationUndoStack.add(new User(currentUser));
         medicationRedoStack.clear();
+        setUndoRedoButtonsDisabled(false, true);
+    }
+
+    /**
+     * Adds the current user object to the waiting list undo stack.
+     */
+    public void addCurrentToWaitingListUndoStack() {
+        waitingListUndoStack.add(new User(currentUser));
+        waitingListRedoStack.clear();
         setUndoRedoButtonsDisabled(false, true);
     }
 
@@ -247,6 +285,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(true, true);
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Action History");
     }
 
 
@@ -259,7 +298,8 @@ public class UserWindowController implements Initializable {
         historyGridPane.setVisible(false);
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(true);
-        setUndoRedoButtonsDisabled(true, true);
+        setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), waitingListRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Waiting List");
     }
 
     /**
@@ -274,6 +314,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(true);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), medicationRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Medications");
     }
 
     /**
@@ -286,6 +327,8 @@ public class UserWindowController implements Initializable {
         medicalHistoryDiseasesPane.setVisible(false);
         medicalHistoryProceduresPane.setVisible(false);
         medicationsPane.setVisible(false);
+        waitingListPane.setVisible(false);
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Attributes");
     }
 
     /**
@@ -300,6 +343,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Disease History");
     }
 
     /**
@@ -314,6 +358,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Procedure History");
     }
 
     /**
@@ -328,6 +373,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(true, true);
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Home");
     }
 
     /**
@@ -336,7 +382,7 @@ public class UserWindowController implements Initializable {
      * Sorts these into tree nodes based on new sessions.
      */
     public void populateHistoryTable() {
-        userHistoryLabel.setText("History of actions for " + currentUser.getName());
+        userHistoryLabel.setText("History of actions for " + currentUser.getPreferredName());
         String[][] userHistory = History.getUserHistory(currentUser.getId());
         ArrayList<TreeItem<String>> treeItems = new ArrayList<>();
         if(userHistory[0][0] != null) {
@@ -364,6 +410,10 @@ public class UserWindowController implements Initializable {
                         case "updateAccountSettings":
                             sessionNode.getChildren().add(new TreeItem<>(userHistory[i][4].substring(0, 1).toUpperCase() + userHistory[i][4].substring(1, 6) +
                                     " " + userHistory[i][4].substring(6, 13) + " at " + userHistory[i][1]));
+                            break;
+
+                        case "waitinglist":
+                            sessionNode.getChildren().add(new TreeItem<>(userHistory[i][4].substring(0, 1).toUpperCase() + userHistory[i][4].substring(1,7) +" "+ userHistory[i][4].substring(7) + " modified " + " at " + userHistory[i][1]));
                             break;
 
                         case "modifyUser":
@@ -397,7 +447,7 @@ public class UserWindowController implements Initializable {
                 new ReadOnlyStringWrapper(p.getValue().getValue()));
 
         actionColumn.setCellValueFactory(param -> {
-            String userName = currentUser.getName(), toCheck = param.getValue().getValue().substring(0, 12);
+            String userName = currentUser.getPreferredName(), toCheck = param.getValue().getValue().substring(0, 12);
             if (toCheck.equals("Update Account")) {
                 return new ReadOnlyStringWrapper("Updated account settings for user " + userName + ".");
             }
@@ -428,6 +478,9 @@ public class UserWindowController implements Initializable {
             if(toCheck.substring(0,11).equals("Medications")) {
                 return new ReadOnlyStringWrapper("-Clinician- Modified user " + userName + "'s medications.");
             }
+            if(toCheck.substring(0,12).equals("Waiting list")) {
+                return new ReadOnlyStringWrapper("-Clinician- Modified user " + userName + "'s waiting list.");
+            }
             if(toCheck.substring(0,8).equals("Diseases")) {
                 return new ReadOnlyStringWrapper("-Clinician- Modified user " + userName + "'s diseases.");
             }
@@ -447,8 +500,8 @@ public class UserWindowController implements Initializable {
      * takes all their attributes and populates the user attributes on the attributes pane accordingly.
      */
     public void populateUserFields() {
-        settingAttributesLabel.setText("Attributes for " + currentUser.getName());
-        String[] splitNames = currentUser.getNameArray();
+        settingAttributesLabel.setText("Attributes for " + currentUser.getPreferredName());
+        String[] splitNames = currentUser.getPreferredNameArray();
         firstNameField.setText(splitNames[0]);
         if (splitNames.length > 2) {
             String[] middleName = new String[splitNames.length - 2];
@@ -471,7 +524,7 @@ public class UserWindowController implements Initializable {
 
         bloodPressureTextField.setText(currentUser.getBloodPressure());
 
-        genderComboBox.setValue(currentUser.getGender());
+        genderComboBox.setValue(currentUser.getGenderIdentity());
         bloodTypeComboBox.setValue(currentUser.getBloodType());
         smokerStatusComboBox.setValue(currentUser.getSmokerStatus());
         alcoholConsumptionComboBox.setValue(currentUser.getAlcoholConsumption());
@@ -560,13 +613,18 @@ public class UserWindowController implements Initializable {
         }
 
         //Commit changes
-        currentUser.setNameArray(name);
+        currentUser.setPreferredNameArray(name);
         currentUser.setHeight(userHeight);
         currentUser.setWeight(userWeight);
         currentUser.setBloodPressure(userBloodPressure);
         currentUser.setDateOfBirth(dateOfBirthPicker.getValue());
         currentUser.setDateOfDeath(dateOfDeathPicker.getValue());
-        currentUser.setGender(genderComboBox.getValue());
+        if (currentUser.getGender() == null) {
+            currentUser.setGender(genderComboBox.getValue());
+            currentUser.setGenderIdentity(genderComboBox.getValue());
+        } else {
+            currentUser.setGenderIdentity(genderComboBox.getValue());
+        }
         currentUser.setBloodType(bloodTypeComboBox.getValue());
         currentUser.setAlcoholConsumption(alcoholConsumptionComboBox.getValue());
         currentUser.setSmokerStatus(smokerStatusComboBox.getValue());
@@ -583,9 +641,8 @@ public class UserWindowController implements Initializable {
                 }
             }
         }
-
-        settingAttributesLabel.setText("Attributes for " + currentUser.getName());
-        userDisplayText.setText("Currently logged in as: " + currentUser.getName());
+        settingAttributesLabel.setText("Attributes for " + currentUser.getPreferredName());
+        userDisplayText.setText("Currently logged in as: " + currentUser.getPreferredName());
         System.out.println(currentUser.toString());
         //Main.getClinicianController().updateUserTable();
         return true;
@@ -601,11 +658,14 @@ public class UserWindowController implements Initializable {
             "Are you sure would like to update the current user? ", "By doing so, the user will be updated with all filled in fields.");
         Optional<ButtonType> result = alert.showAndWait();
         if (result.get() == ButtonType.OK && updateUser()) {
-            Main.saveUsers(Main.getUserPath(), true);
+            IO.saveUsers(IO.getUserPath(), true);
             populateUserFields();
             String text = History.prepareFileStringGUI(currentUser.getId(), "update");
             History.printToFile(streamOut, text);
             populateHistoryTable();
+            titleBar.saved(true);
+            titleBar.setTitle(currentUser.getPreferredName(),"User");
+            statusIndicator.setStatus("Saved", false);
         }
         alert.close();
     }
@@ -615,14 +675,15 @@ public class UserWindowController implements Initializable {
      * Then checks to see if there are any other actions that can be undone and adjusts the buttons accordingly.
      */
     public void undo() {
+        titleBar.saved(false);
         if (attributesGridPane.isVisible()) {
             attributeFieldUnfocused();
             //Add the current fields to the redo stack
             attributeRedoStack.add(new User(currentUser));
             //Copy the attribute information from the top element of the undo stack
-            currentUser.copyFieldsFrom(attributeUndoStack.get(attributeUndoStack.size() - 1));
+            currentUser.copyFieldsFrom(attributeUndoStack.getLast());
             //Remove the top element of the undo stack
-            attributeUndoStack.remove(attributeUndoStack.size() - 1);
+            attributeUndoStack.removeLast();
             populateUserFields();
 
             setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), false);
@@ -633,13 +694,21 @@ public class UserWindowController implements Initializable {
             //Add the current medication lists to the redo stack
             medicationRedoStack.add(new User(currentUser));
             //Copy the medication lists from the top element of the undo stack
-            currentUser.copyMedicationListsFrom(medicationUndoStack.get(medicationUndoStack.size() - 1));
+            currentUser.copyMedicationListsFrom(medicationUndoStack.getLast());
             //Remove the top element of the undo stack
-            medicationUndoStack.remove(medicationUndoStack.size() - 1);
+            medicationUndoStack.removeLast();
 
             setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), false);
             Main.updateMedications();
+        } else if (waitingListPane.isVisible()){
+            waitingListRedoStack.add(new User(currentUser));
+            currentUser.copyWaitingListsFrom(waitingListUndoStack.get(waitingListUndoStack.size()-1));
+            waitingListUndoStack.remove(waitingListUndoStack.size()-1);
+            setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), false);
+            Main.updateWaitingList();
         }
+        statusIndicator.setStatus("Undid last action", false);
+        titleBar.saved(false);
     }
 
     /**
@@ -650,11 +719,11 @@ public class UserWindowController implements Initializable {
         if (attributesGridPane.isVisible()) {
             attributeFieldUnfocused();
             //Add the current fields to the undo stack
-            addUserToUndoStack(currentUser);
+            attributeUndoStack.add(new User(currentUser));
             //Copy the attribute information from the top element of the redo stack
-            currentUser.copyFieldsFrom(attributeRedoStack.get(attributeRedoStack.size() - 1));
+            currentUser.copyFieldsFrom(attributeRedoStack.getLast());
             //Remove the top element of the redo stack
-            attributeRedoStack.remove(attributeRedoStack.size() - 1);
+            attributeRedoStack.removeLast();
             populateUserFields();
 
             setUndoRedoButtonsDisabled(false, attributeRedoStack.isEmpty());
@@ -665,13 +734,21 @@ public class UserWindowController implements Initializable {
             //Add the current medication lists to the undo stack
             medicationUndoStack.add(new User(currentUser));
             //Copy the medications lists from the top element of the redo stack
-            currentUser.copyMedicationListsFrom(medicationRedoStack.get(medicationRedoStack.size() - 1));
+            currentUser.copyMedicationListsFrom(medicationRedoStack.getLast());
             //Remove the top element of the redo stack
-            medicationRedoStack.remove(medicationRedoStack.size() - 1);
+            medicationRedoStack.removeLast();
 
             setUndoRedoButtonsDisabled(false, medicationRedoStack.isEmpty());
             Main.updateMedications();
+        } else if (waitingListPane.isVisible()){
+            waitingListUndoStack.add(new User(currentUser));
+            currentUser.copyWaitingListsFrom(waitingListRedoStack.get(waitingListRedoStack.size() - 1));
+            waitingListRedoStack.remove(waitingListRedoStack.size() - 1);
+            setUndoRedoButtonsDisabled(false, waitingListRedoStack.isEmpty());
+            Main.updateWaitingList();
         }
+        statusIndicator.setStatus("Redid last action", false);
+        titleBar.saved(false);
     }
 
     /**
@@ -763,7 +840,6 @@ public class UserWindowController implements Initializable {
                     Main.setAccountSettingsEnterEvent();
                     stage.showAndWait();
                 } catch (Exception e) {
-                    System.out.println("here");
                     e.printStackTrace();
                 }
             }else{ // Password incorrect
@@ -818,14 +894,20 @@ public class UserWindowController implements Initializable {
 
     /**
      * Sets the waiting list button to visible if shown is true
+     *
      * @param shown True if the waiting list button is to be shown, otherwise False
      */
     public void setControlsShown(Boolean shown) {
-        if (currentUser != null){
+        if (currentUser != null) {
             if (currentUser.isReceiver())
-            waitingListButton.setVisible(true);
+                waitingListButton.setVisible(true);
         } else {
             waitingListButton.setVisible(shown);
         }
+    }
+
+
+    public ArrayList<User> getWaitingListUndoStack() {
+        return waitingListUndoStack;
     }
 }
